# EU_leadership_docs

./: README.md  pyproject.toml
data/: large_coding_dataset.xlsx  manual_coding_dataset.xlsx  manual_coding_dataset_edited.xlsx  manual_coding_dataset_raw.xlsx  second_manual_coding_dataset.xlsx  second_unseen_data_dataset.xlsx  unseen_data_dataset.xlsx  ~$manual_coding_dataset.xlsx
data/filtered/: german_press_releases_filtered.csv
data/raw/: council_minutes_data.xlsx  council_minutes_output.txt  eeas_until_2017.csv  french_press_releases.csv
src/eu_leadership_docs/: config.py  main.py
src/eu_leadership_docs/analysis_playground/: bert_classifier.py  classifier.py  classifier_final.py  envisioned_methodology.drawio  first_look.py  lr_classifier.py  manual_coding_tool.py  methodology_draft.drawio  preprocessing.drawio  smaller_windows_manual_coding_tool.py  venn_draft.drawio
src/eu_leadership_docs/extra_filtering/: smaller_context_windows.py
src/eu_leadership_docs/filters/: eeas_chunk_filter.py  french_chunk_filter.py  german_chunk_filter.py  info.txt
src/eu_leadership_docs/scrapers/: cm_one_test.py  eeas_scraper.py  eeas_scraper_new.py  eeas_scraper_old.py  french_scraper.py  german_scraper.py  germany.py
src/eu_leadership_docs/translators/: french_translate.py  german_translate.py
src/eu_leadership_docs/utils/: helpers.py  path_helpers.py
