[project]
name = "eu-leadership-docs"
version = "0.1.0"
description = "EU leadership project"
authors = [
    {name = "Wiktoria Ciolek-Poniatowska"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "path (>=17.1.1,<18.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "playwright (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
